package com.example.oodlegame.controller;

public class PartidaController {
}
